2002-11-26  Tim Coleman <tim@timcoleman.com>
	* System.Data.SqlClient/SqlCommand.cs:
	* System.Data.SqlClient/SqlConnection.cs:
	* System.Data.SqlClient/SqlDataReader.cs:
	* System.Data.SqlClient/SqlParameter.cs:
	* System.Data.SqlClient/SqlParameterCollection.cs:
	* System.Data.SqlClient/SqlTransaction.cs:
		Many changes around restructuring of parameter
		information so that the Sybase provider supports
		PREPAREs too.

2002-11-25  Ville Palo <vi64pa@koti.soon.fi>

	* System.Data/DataSet.cs : Started to implement ReadXmlSchema -method
	
2002-11-21  Tim Coleman <tim@timcoleman.com>
        * System.Data.build:
        * System.Data.SqlClient/SqlCommand.cs:
        * System.Data.SqlClient/SqlConnection.cs:
        * System.Data.SqlClient/SqlConnectionPool.cs:
        * System.Data.SqlClient/SqlDataReader.cs:
        * System.Data.SqlClient/SqlException.cs:
        * System.Data.SqlClient/SqlInfoMessageEventArgs.cs:
        * System.Data.SqlClient/SqlParameter.cs:
        * System.Data.SqlClient/SqlTransaction.cs:
        * System.Data.SqlClient/SqlXmlTextReader.cs:
        * System.Data.SqlTypes/SqlDecimal.cs:
                Modify to accept new Mono.Data.Tds.Protocol
                namespace in Mono.Data.Tds assembly, replacing
                Mono.Data.TdsClient.Internal

2002-11-20  Ville Palo <vi64pa@koti.soon.fi>

	* System.Data.SqlTypes/SqlDecimal.cs: Ported some divide-stuff from 
	decimal.c file. Does not work correctly yet.
	
2002-11-18  Tim Coleman <tim@timcoleman.com>
	* System.Data.SqlClient/SqlConnection.cs:
		BeginTransaction bug.
	* System.Data.SqlClient/SqlParameter.cs:
		Add some comments to describe what is going on.
	* System.Data.SqlClient/SqlCommand.cs:
		Add a TODO.
	* System.Data.SqlClient/SqlDataReader.cs:
		Add support to get SQL Types

2002-11-16  Daniel Morgan <danmorg@sc.rr.com>

	* System.Data/DataView.cs: fix bug
	with DataViewEnumerator causing InvalidOperationException
	on the last item

2002-11-15  Tim Coleman <tim@timcoleman.com>